Updated Data Source

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port = 8001
 
 #Data source
-spring.datasource.url = jdbc:postgresql://localhost:5432/usermanagement?username=postgres&password=postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/User?username=postgres&password=root
 spring.datasource.username=postgres
-spring.datasoure.password=postgres
+spring.datasource.password=root
 
 #Hibernate JPA
 spring.jpa.show-sql = true
